--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,6 +14,6 @@ html
           a.nav-link href="#"
             | Log In
         li.nav-item
-          a.nav-link href="#"
+          a.nav-link href="/register"
             | Sign Up
     = yield
