--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,3 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "plugins/login-style";
+
+.back-home {
+  margin-bottom: 20px;
+  font-family: cursive;
+}
+
+.back-home > a {
+  color: white;
+}
