--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -25,7 +25,7 @@
       .pull-left
         = fa_icon 'clock-o'
       .time-details
-        = @event.starts_at.strftime('%A, %d %b %Y %l:%M %p')
+        = @event.starts_at_to_string
       .pull-left
         = fa_icon 'map-marker'
       .venue-details
