--- a/app/views/tickets/new.html.slim
+++ b/app/views/tickets/new.html.slim
@@ -12,7 +12,7 @@
       .pull-left
         = fa_icon 'clock-o'
       .time-details
-        = @event.starts_at.strftime('%A, %d %b %Y %l:%M %p')
+        = @event.starts_at_to_string
   .row
     .col-md-11.col-md-offset-1
       table.table
