--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,21 +8,18 @@ html
     = csrf_meta_tags
   body
     nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
-      a.navbar-brand href="#{root_path}" Cheetah Ticket
+      = link_to "Cheetah Ticket", root_path, class: "navbar-brand"
       - unless current_user
         ul.nav.navbar-nav
           li.nav-item
-            a.nav-link href="/login"
-              | Sign In
+            = link_to "Sign In", login_path, class: "nav-link"
           li.nav-item
-            a.nav-link href="/register"
-              | Sign Up
+            = link_to "Sign Up", register_path, class: "nav-link"
       - else
         ul.nav.navbar-nav.navbar-right
           li.nav-item
             a.nav-link href="#"
               | Welcome #{current_user.email}
           li.nav-item
-            a.nav-link href="/logout"
-              | Sign Out
+            = link_to "Sign Out", logout_path, class: "nav-link"
     = yield
