--- a/app/views/tickets/new.html.slim
+++ b/app/views/tickets/new.html.slim
@@ -4,13 +4,13 @@
       h3
         = @event.name
       .pull-left
-        = fa_icon 'map-marker'
+        = fa_icon "map-marker"
       .venue-details
         = @event.venue.name
         br
         = @event.venue.full_address
       .pull-left
-        = fa_icon 'clock-o'
+        = fa_icon "clock-o"
       .time-details
         = @event.starts_at_to_string
   .row
@@ -27,9 +27,9 @@
             td
               = type.name
             td
-              = number_to_currency(type.price, unit: 'VND ', precision: 0)
+              = number_to_currency(type.price, unit: "VND ", precision: 0)
             td
-              = select_tag('quantity', options_for_select(0..10))
+              = select_tag("quantity", options_for_select(0..10))
   .row
     .col-md-2.col-md-offset-5
       button.btn.btn-success.btn-lg.btn-block
