--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -8,4 +8,4 @@
   - @events.in_groups_of(3) do |group|
     .row
       - group.compact.each do |event|
-        = render partial: 'card', locals: { event: event }
+        = render partial: "card", locals: { event: event }
