[t] Add tests for models

--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -25,7 +25,7 @@
       .pull-left
         = fa_icon "clock-o"
       .time-details
-        = @event.starts_at_to_string
+        = @event.starts_at_to_s
       .pull-left
         = fa_icon "map-marker"
       .venue-details
