--- a/app/views/events/_card.html.slim
+++ b/app/views/events/_card.html.slim
@@ -7,5 +7,15 @@
       .card-block
         h4.card-title
           = event.name
-        p.card-text
-          | Some quick example text to build on the card title and make up the bulk of the card's content. 
+        .card-text
+          .col-sm-9
+            .min-price
+              | From 
+              span.price
+                = formated_price(event.min_price)
+            p.details
+              span.region
+                = event.region_name
+              = fa_icon "hashtag"
+              span.category
+                = event.category.name
