[f] Add calendar icon to event card

--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -5,3 +5,10 @@ $limed_spruce_color: #303B46;
 $athens_gray_color: #E9EDF0;
 $mine_shaft_color: #333333;
 $silver_chalice_color: #B2B2B2;
+
+/* Event card */
+$dove_gray_color: #676767;
+$dusty_gray_color: #979797;
+$seashell_color: #F1F1F1;
+$silver_color: #C2C2C2;
+$carnation_color: #F05252;
