[r] Fix typo “formated_price”

--- a/app/views/events/_card.html.slim
+++ b/app/views/events/_card.html.slim
@@ -12,7 +12,7 @@
             .min-price
               | From 
               span.price
-                = formated_price(event.min_price)
+                = formatted_price(event.min_price)
             p.details
               span.region
                 = event.region_name
