[r] Using shared_context and delegate

--- a/app/views/events/_card.html.slim
+++ b/app/views/events/_card.html.slim
@@ -18,7 +18,7 @@
                 = event.region_name
               = fa_icon "hashtag"
               span.category
-                = event.category.name
+                = event.category_name
           .col-sm-3
             .icon_calendar
               .month_wrap
