--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -14,4 +14,4 @@
       label.floating PASSWORD CONFIRMATION
   = f.submit "Create Account", class: "submit-button"
 .footer
-  = render 'layouts/form_errors', errors: @user.errors
+  = render "layouts/form_errors", errors: @user.errors
