--- a/app/views/layouts/_form_errors.html.slim
+++ b/app/views/layouts/_form_errors.html.slim
@@ -1,5 +1,2 @@
-- unless errors.empty?
-  .alert.alert-danger
-    ul style="list-style-type: none"
-      - errors.full_messages.each do |msg|
-        li = msg
+- errors.full_messages.each do |msg|
+  p.error= msg
