--- a/app/views/events/_card.html.slim
+++ b/app/views/events/_card.html.slim
@@ -3,7 +3,7 @@
     .card
       .cover
         .cover-content
-          = image_tag("#{event.hero_image_url}")
+          = image_tag(event.hero_image_url)
       .card-block
         h4.card-title
           = event.name
