--- a/app/assets/stylesheets/tickets.scss
+++ b/app/assets/stylesheets/tickets.scss
@@ -1,3 +1,8 @@
+.expired-ticket-error {
+  margin-top: 100px;
+  padding-left: 100px;
+}
+
 .tickets-buy {
   background-color: $gray-lightest;
   padding-bottom: 80px;
