--- a/app/views/tickets/new.html.slim
+++ b/app/views/tickets/new.html.slim
@@ -1,5 +1,3 @@
-= javascript_include_tag "tickets", "data-turbolinks-track" => true
-
 - if @event.has_expired?
   .alert.alert-danger.expired-ticket-error
     | This event is no longer available.
@@ -45,3 +43,23 @@
         button.btn.btn-success.btn-lg.btn-block
           |  Buy
       div
+
+coffee:
+  seconds = undefined
+  countdown = undefined
+
+  redirect = ->
+    document.location.href = "/"
+
+  updateSecs = ->
+    $("#seconds").html(seconds)
+    if seconds-- == 0
+      clearInterval countdown
+      redirect()
+
+  countdownTimer = ->
+    seconds = $("#seconds").html()
+    countdown = setInterval(updateSecs, 1000)
+
+  $ -> countdownTimer()
+
