--- a/app/views/layouts/_form_errors.html.slim
+++ b/app/views/layouts/_form_errors.html.slim
@@ -1,4 +1,4 @@
 - if session[:previous_url]
-  p.error= "Please login first!"
+  p.error Please login first!
 - errors.full_messages.each do |msg|
   p.error= msg
