--- a/app/views/tickets/new.html.slim
+++ b/app/views/tickets/new.html.slim
@@ -51,15 +51,15 @@ coffee:
   redirect = ->
     document.location.href = "/"
 
-  updateSecs = ->
-    $("#seconds").html(seconds)
+  updateSeconds = ->
+    $("#seconds").html seconds
     if seconds-- == 0
       clearInterval countdown
       redirect()
 
   countdownTimer = ->
     seconds = $("#seconds").html()
-    countdown = setInterval(updateSecs, 1000)
+    countdown = setInterval(updateSeconds, 1000)
 
   $ -> countdownTimer()
 
