[r] Replace tickets_controller by orders_controller

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@
 @import "events";
 @import "font-awesome";
 @import "nav";
-@import "tickets";
+@import "orders";
 
 body {
   font-family: 'Open Sans';
