--- a/app/views/orders/new.html.slim
+++ b/app/views/orders/new.html.slim
@@ -21,28 +21,28 @@
           = fa_icon "clock-o"
         .time-details
           = @event.starts_at_to_s
-    .row
-      .col-md-11.col-md-offset-1
-        table.table
-          th
-            |  Ticket Type
-          th
-            |  Unit Price
-          th
-            |  Quantity
-          - @event.ticket_types.each do |type|
-            tr
-              td
-                = type.name
-              td
-                = number_to_currency(type.price, unit: "VND ", precision: 0)
-              td
-                = select_tag("quantity", options_for_select(0..type.actual_max_quantity))
-    .row
-      .col-md-2.col-md-offset-5
-        button.btn.btn-success.btn-lg.btn-block
-          |  Buy
-      div
+    = form_for [@event, @order] do |f|
+      .row
+        .col-md-11.col-md-offset-1
+          table.table
+            th
+              |  Ticket Type
+            th
+              |  Unit Price
+            th
+              |  Quantity
+            - @event.ticket_types.each do |type|
+              tr
+                td.ticket-name
+                  = type.name
+                td.ticket-price
+                  = formatted_price(type.price)
+                td
+                  = select_tag("#{dom_id type}[quantity]", options_for_select(0..type.actual_max_quantity), class: "quantity_select")
+      .row
+        .col-md-2.col-md-offset-5
+          = f.submit "Buy", class: "btn btn-success btn-lg btn-block"
+        div
 
 coffee:
   seconds = undefined
