--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -29,8 +29,14 @@
     margin-left: 40px;
   }
 
+  .order-message {
+    margin-top: 30px;
+  }
+
   table {
     font-size: 14px;
+    margin-top: 40px;
+    margin-bottom: 80px;
 
     th {
       color: $mine_shaft_color;
@@ -47,7 +53,16 @@
       }
     }
 
-    margin-top: 40px;
-    margin-bottom: 80px;
+    tfoot {
+      td {
+        font-weight: bold;
+        font-size: 18px;
+        color: #4D3414;
+      }
+    }
+
+    .center {
+      text-align: center;
+    }
   }
 }
