[r] Use dashes in css files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,6 @@ body {
 }
 
 .btn.btn-danger {
-  background-color: $flame_pea_color;
-  border: 2px solid $burnt_sienna_color;
+  background-color: $flame-pea-color;
+  border: 2px solid $burnt-sienna-color;
 }
