--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -1,14 +1,15 @@
-$flame_pea_color: #D85742;
-$burnt_sienna_color: #F1705B;
-$emperor_color: #555555;
-$limed_spruce_color: #303B46;
-$athens_gray_color: #E9EDF0;
-$mine_shaft_color: #333333;
-$silver_chalice_color: #B2B2B2;
+$flame-pea-color: #D85742;
+$burnt-sienna-color: #F1705B;
+$emperor-color: #555555;
+$limed-spruce-color: #303B46;
+$athens-gray-color: #E9EDF0;
+$mine-shaft-color: #333333;
+$silver-chalice-color: #B2B2B2;
+$punga-color: #4D3414;
 
 /* Event card */
-$dove_gray_color: #676767;
-$dusty_gray_color: #979797;
-$seashell_color: #F1F1F1;
-$silver_color: #C2C2C2;
-$carnation_color: #F05252;
+$dove-gray-color: #676767;
+$dusty-gray-color: #979797;
+$seashell-color: #F1F1F1;
+$silver-color: #C2C2C2;
+$carnation-color: #F05252;
