--- a/app/views/events/_card.html.slim
+++ b/app/views/events/_card.html.slim
@@ -20,8 +20,8 @@
               span.category
                 = event.category_name
           .col-sm-3
-            .icon_calendar
-              .month_wrap
+            .icon-calendar
+              .month-wrap
                 = event.starts_at_to_month
-              .days_wrap
+              .days-wrap
                 = event.starts_at_to_day
