--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -14,20 +14,8 @@
   input {
     margin: auto;
     margin-top: 20px;
-    border-bottom-color: $emperor-color;
-    border-bottom-left-radius: 2px;
-    border-bottom-style: none;
-    border-bottom-width: 0px;
-    border-left-color: $emperor-color;
-    border-left-style: none;
-    border-left-width: 0px;
-    border-right-color: $emperor-color;
-    border-right-style: none;
-    border-right-width: 0px;
-    border-top-color: $emperor-color;
-    border-top-left-radius: 2px;
-    border-top-style: none;
-    border-top-width: 0px;
+    border: 0 none $emperor-color;
+    border-radius: 4px;
     color: $emperor-color;
     display: block;
     font-size: 17px;
@@ -214,7 +202,7 @@
 
       .price {
         font-weight: bold;
-        font-size: 18px;
+        font-size: 16px;
       }
     }
 
