--- a/app/views/orders/new.html.slim
+++ b/app/views/orders/new.html.slim
@@ -4,7 +4,6 @@
   .container-fluid.tickets-buy
     = render partial: "header", locals: { event: @event }
     = form_for [@event, @order] do |f|
-      = f.hidden_field :event_id, value: @event.id
       .row
         .col-md-11.col-md-offset-1
           table.table
@@ -19,14 +18,13 @@
             - f.object.order_items.each do |order_item|
               tr
                 td.ticket-name
-                  = order_item.ticket_type.name
+                  = order_item.ticket_type_name
                 td.ticket-price.center
-                  = formatted_price(order_item.ticket_type.price)
+                  = formatted_price(order_item.ticket_type_price)
                 td.center
                   = f.fields_for :order_items, order_item do |ff|
                     = ff.hidden_field :ticket_type_id, value: ff.object.ticket_type_id
-                    = ff.hidden_field :ticket_type_price, value: ff.object.ticket_type_price
-                    = ff.select "quantity", options_for_select(0..ff.object.ticket_type.actual_max_quantity), {}, class: "quantity-select"
+                    = ff.select "quantity", options_for_select(0..ff.object.ticket_type.actual_max_quantity), {}, class: "quantity-select", data: { price: ff.object.ticket_type_price }
             tfoot
               tr
                 td.center[colspan="2"]
@@ -48,10 +46,8 @@ coffee:
   countTotal = ->
     selectTags = $(".quantity-select")
     total = 0
-    i = 0
-    while i < selectTags.length
-      total += selectTags[i].value * $("#order_order_items_attributes_" + i + "_ticket_type_price")[0].value
-      i++
+    $(".quantity-select").each ->
+      total += $(this).data("price") * $(this).val()
     total
 
   $(".quantity-select").change ->
