[f] Add Order management page

--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -3,9 +3,6 @@ $burnt-sienna-color: #F1705B;
 $emperor-color: #555555;
 $limed-spruce-color: #303B46;
 $athens-gray-color: #E9EDF0;
-$mine-shaft-color: #333333;
-$silver-chalice-color: #B2B2B2;
-$punga-color: #4D3414;
 
 /* Event card */
 $dove-gray-color: #676767;
@@ -13,3 +10,10 @@ $dusty-gray-color: #979797;
 $seashell-color: #F1F1F1;
 $silver-color: #C2C2C2;
 $carnation-color: #F05252;
+
+/* Table */
+$mine-shaft-color: #333333;
+$silver-chalice-color: #B2B2B2;
+$punga-color: #4D3414;
+$logan-color: #B0B0CE;
+$mischka-color: #DADAE7;
