--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -13,25 +13,29 @@
         = formatted_price(current_user.total_amount)
   .row
     .col-md-11.col-md-offset-1
-      table.table.order-list
-        th.center
-          |  No.
-        th
-          |  Event
-        th.center
-          | Booking Date
-        th.center
-          |  Total
-        - @orders.each_with_index do |order, index|
-          tr[data-href=order_path(order)]
-            td.center
-              = index + 1
-            td.event-name
-              = order.event_name
-            td.center.booking-time
-              = order.created_at_to_s
-            td.center.order-total
-              = formatted_price(order.total)
+      - if @orders.empty?
+        .alert.alert-danger.order-message
+          = "You don't have any order."
+      - else
+        table.table.order-list
+          th.center
+            |  No.
+          th
+            |  Event
+          th.center
+            | Booking Date
+          th.center
+            |  Total
+          - @orders.each_with_index do |order, index|
+            tr[data-href=order_path(order)]
+              td.center
+                = index + 1
+              td.event-name
+                = order.event_name
+              td.center.booking-time
+                = order.created_at_to_s
+              td.center.order-total
+                = formatted_price(order.total)
 
 coffee:
   $("tr[data-href]").click ->
