[f] Add sidebar for settings page

--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -3,6 +3,7 @@ $burnt-sienna-color: #F1705B;
 $emperor-color: #555555;
 $limed-spruce-color: #303B46;
 $athens-gray-color: #E9EDF0;
+$shuttle-gray-color: #5A6675;
 
 /* Event card */
 $dove-gray-color: #676767;
