--- a/app/views/layouts/settings.html.slim
+++ b/app/views/layouts/settings.html.slim
@@ -7,10 +7,10 @@
       ul
         li class=("active" if controller_name == "orders")
           = fa_icon "ticket"
-          |  Order Management
-        li
+          = link_to "Order Management", orders_path
+        li class=("active" if controller_name == "events")
           = fa_icon "calendar"
-          |  Event Management
+          = link_to "Event Management", user_events_path(current_user)
     .col-md-9.tickets-buy.event-content.settings-content
       = yield :settings
 = render template: "layouts/application"  
